Added dummy data and improved UI

--- a/client/main.html
+++ b/client/main.html
@@ -12,8 +12,11 @@
     </div>
 
     <div class="row">
-      <div class="col-xs-12">
-        <h1>Welcome to lingus!</h1>
+      <div class="col-xs-4">
+        {{> lingosList}}
+      </div>
+      <div class="col-xs-4">
+        <h1>word definition</h1>
       </div>
     </div>
 
