--- a/client/main.html
+++ b/client/main.html
@@ -1,4 +1,4 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="/main.css">
   <title>lingus</title>
 </head>
