--- a/client/main.html
+++ b/client/main.html
@@ -1,4 +1,5 @@
 <head>
   <link rel="stylesheet" type="text/css" href="/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>lingus</title>
 </head>
